# FreeAccess

./: CMakeLists.txt  LICENSE  README.md
include/FreeAccess/: AccessTable.hpp  FixedString.hpp  NullCollapse.hpp  PrivateAccessor.hpp
tests/: CMakeLists.txt  demo.cpp
